# Bluetooth-RFCOMM-Linux

./: .gitignore  CMakeLists.txt  bluetooth  bluetooth.c  driver.c  main.c
include/: channel.h  client.h  macros.hpp  server.h
scripts/: exe.sh
src/: channel.c  client.c  server.c
